--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "winbox-react": "^1.0.6"
+    "react-winbox": "^1.4.2",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
