--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "framer-motion": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.4",
     "react-winbox": "^1.4.2",
     "terminal-in-react": "^4.3.1",
     "web-vitals": "^2.1.4"
