--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.4",
-    "react-terminal": "^1.2.8",
     "react-winbox": "^1.4.2",
+    "terminal-in-react": "^4.3.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
